--- a/Project-2/style.css
+++ b/Project-2/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Gilroy", sans-serif;
+  font-family: "Gilroy medium", sans-serif;
   
 }
 html,
@@ -14,44 +14,63 @@ body {
   height: 100%;
   width: 100%;
   overflow: hidden;
-  /* background-color: red; */
 }
 #header {
-  height: 100px;
-  /* width: ; */
-  /* background: red; */
+  height: 80px;
+  width: 100%;
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: 3fr 3fr 3fr;
   place-items: center;
+  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(224,224,224,0.53125) 100%);
+  /* position: fixed; */
+
 }
 #header img {
-  height: 32px;
-  /* background-color: #2196F3; */
-
+    height: 32px;
+    position: relative;
+    left:-20%;
 }
 
-#buttons{
-height: 40px;
-width: 280px;
-/* background-color: #2196F3; */
-grid-template-columns: auto auto auto auto;
-display: grid;
-justify-content: center;
-gap:20px;
-/* gap:20px; */
-}
-#header ul  {
+#navList{
     width: 388px;
     height: 18px;
+    font-size: 13px;
     list-style-type: none;
+    /* background-color: blueviolet; */
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    /* background-color: #2196F3; */
-    /* padding: 10px; */
-  }
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+#l1{
+    
+    grid-area:1/1/2/2 ;
+}
+#l2{
+    
+    grid-area: 1/3/2/4;
+}
+#l3{
+    
+    grid-area: 1/5/2/6;
+}
+#l4{
+    grid-area:1/7/2/8 ;
+    
+}
+#buttons{
+    height: 35px;
+    width: 230px;
+    /* background-color: blueviolet; */
+    border-style: none;
+    display: grid;
+    grid-template-columns: 4fr 1fr 4fr;
+    position: relative;
+    right:-10%;
+
+}
 #buttons button{
-    width: 130px;
-    height: 40px;
+    /* width: 100px; */
+    /* height: 40px; */
+    font-size: 13px;
     text-align: center;
     border-radius: 6px;
     border: 1px solid rgb(24, 160, 251);
@@ -60,37 +79,39 @@ gap:20px;
     border-style: none;
     background-color: #fff;
     color: rgb(24, 160, 251);
+    grid-area: 1/1/2/2;
 }
 #signup{
     background-color: rgb(24, 160, 251);
     color: white;
+    grid-area: 1/3/2/4;
 }
 
 #hero{
     height: 500px;
     width: 100%;
-    /* background: #000; */
-    /* background-image: url(./img/Hero\ E.png); */
-    /* background-position: center; */
-    
+    /* position: relative;
+    top: 80px;
+    z-index: -1; */
 }
 #hero img{
     width: 100%;
     height: auto;
 }
-
 #page2{
     height: 100%;
     width: 100%;
-    padding: 5%;
+    padding: 7% 5% 5% 5%;
+    
     /* overflow: hidden; */
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 6fr 1fr 6fr;
 }
 #item1 h1{
-    font-size: 4em;
+    font-size: 2.1em;
     padding-bottom: 15px;
+    z-index: 2;
 }
 #item1{
     grid-area:1/1/2/4 ;
@@ -121,13 +142,53 @@ gap:20px;
     background-color: rgb(24, 160, 251);
     color: white; 
 }
+.box{
+    padding-bottom: 20px;
+}
 .box h1{
     margin-top: 5px;
-    margin-bottom:50px ;
+    margin-bottom:30px ;
+    font-size: 1.3em;
 }
 .box p{
     line-height: 25px;
     font-weight: 300;
-    font-size: 1.5em;
-    padding-bottom: 50px;
+    font-size: 1em;
+    padding-bottom: 30px;
+    color: rgba(46, 46, 46, 0.791);
+}
+#page3{
+
+        height: 150%;
+        width: 100%;
+        padding: 8% 5% 5% 5%;
+    /* background-color: rgb(144, 144, 168); */
+
+}
+#header2{
+    /* height: fit-content; */
+    width: 100%;
+    /* background-color: blue; */
+    text-align: center;
+    padding: 0% 7%;
+    margin-bottom: 8%;
+}
+#header2 h1{
+    font-size: 2.5em;
+    margin-bottom: 3%;
+    /* letter-spacing:-2px; */
+    
+}
+#header2 p{
+    /* line-height: 25px; */
+    font-weight: 300;
+    font-size: 2.1em;
+    /* padding-bottom: 30px; */
+    color: rgba(46, 46, 46, 0.791);
+
+}
+#hero2{
+    height: 100px;
+    width: 100px;
+    background-color: lightcoral;
 }
